# bundle-generator-service

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pylintrc  LICENSE.txt  README.md  THIRDPARTYLICENSES  docker-compose.yml  generator.py  mutmut_config.py  mypy.ini  tox.ini
.github/workflows/: build.yaml  release.yaml  set-version.yaml  static.yaml  test.yaml
charts/: bundle-generator-service-0.0.17.tgz  bundle-generator-service-0.0.18.tgz  bundle-generator-service-0.0.19.tgz  bundle-generator-service-0.0.20.tgz  index.yaml
helm/: Chart.yaml
helm/charts/bundlegen/: Chart.yaml  values.yaml
helm/charts/bundlegen/templates/: configmap.yaml  deployment.yaml  pv.yaml  service.yaml
helm/charts/service/: Chart.yaml  values.yaml
helm/charts/service/templates/: _helpers.tpl  deployment.yaml  pv.yaml
service/: Dockerfile  __init__.py  app.py  config.py  config_dev.json  decoders.py  downloaders.py  encoders.py  entrypoint.sh  file_structures.py  formatter.py  handlers.py  info.py  logging_config.py  pyproject.toml  utils.py  worker.py
tests/: __init__.py  config.json  test_configs.py  test_decoders.py  test_downloaders.py  test_encoders.py  test_file_structures.py  test_formatters.py  test_handlers.py  test_interactions.py  test_main.py  test_utils.py  test_workers.py
