[tool.poetry]
name = "bundle-generator-service"
version = '0.0.19'
description = "Wrapper around https://github.com/rdkcentral/BundleGen"
readme = "README.md"
authors = ["Yauheni Yemelyanenka aka (EugeneY) <yauheni_yemelyanenka@epam.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
msgpack = "^1.0.2"
pika = "^1.2.0"
boto3 = "^1.18.37"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
black = "^21.7b0"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
